# sqlite-literature-management-fastmcp-mcp-server

./: .dockerignore  Dockerfile  README.md  create_sources_db.sql  docker-compose.yml  pyproject.toml  sqlite-paper-fastmcp-server.py
examples/: sources.db
migrations/: 2026-03-09__expand-entity-relation-types.sql  2026-03-09__normalize-identifiers.sql
sqlite_lit_server/: __init__.py  app.py  db.py  repository.py  resources.py  schema.py  tools_admin.py  tools_entities.py  tools_sources.py
tests/: conftest.py  test_batch_regressions.py  test_core_db_ops.py  test_identifier_normalization.py  test_migration_backfill.py  test_provenance_fields.py  test_resources.py  test_schema_version.py
